ISSUE: - form input elements on the  live site seem to have an outline/think border that doesn't match the rules in dev tools SOL: - had not noticed a second border-color overriding initial color. set  border-color: #ccc
ISSUE:
- form text-area width too narrow, caused by parent class=col-med?
SOL(temporary, as should be fixed using external stylesheet):
- use inline css

ISSUE:
- accordion not behaving as expected: @media, w >1260
SOL(temporary, as should be fixed using flebox):
- set extra-contact-info width: 27%
- set position: relative, left: -50px;

--- a/css/application.css
+++ b/css/application.css
@@ -6242,7 +6242,7 @@ div#contact-us div#contact-us-container div#netmatters-offices div.container div
   border-color: #ccc;
   width: 100%;
   background-color: #fff;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #ccc;
   border-radius: 2px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -6338,7 +6338,7 @@ div#contact-us div#contact-us-container div#netmatters-offices div.container div
   display: flex;
   justify-content: space-between;
 }
-div#contact-us div#contact-us-container div#netmatters-offices div.container div#netmatters-offices-bottom-container div.form-container-outer form div#policies div.policies-footer a {
+div#contact-us div#contact-us-container div#netmatters-offices div.container div#netmatters-offices-bottom-container div.form-container-outer form div#policies div.policies-footer a#send-enquiry-button {
   display: flex;
   margin-top: 10px;
   margin-bottom: 30px;
@@ -6357,7 +6357,7 @@ div#contact-us div#contact-us-container div#netmatters-offices div.container div
   height: 45px;
   font-size: 1.063rem;
 }
-div#contact-us div#contact-us-container div#netmatters-offices div.container div#netmatters-offices-bottom-container div.form-container-outer form div#policies div.policies-footer a:hover {
+div#contact-us div#contact-us-container div#netmatters-offices div.container div#netmatters-offices-bottom-container div.form-container-outer form div#policies div.policies-footer a#send-enquiry-button:hover {
   background-color: #22242e;
   border-color: #191a22;
 }
@@ -6381,9 +6381,27 @@ div#contact-us div#contact-us-container div#netmatters-offices div.container div
     width: 66%;
   }
   div#contact-us div#contact-us-container div#netmatters-offices div.container div#netmatters-offices-bottom-container div.extra-contact-info {
+    width: 27%;
     position: relative;
     left: -50px;
   }
+}
+div#contact-us div#notice {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 60%;
+  margin: auto;
+  padding: 10px;
+  background-color: hsl(348, 100%, 61%);
+  transition: 1s;
+}
+div#contact-us div#notice ul#notice-list {
+  width: calc(100% - 20px);
+  margin: auto;
+}
+div#contact-us div#notice ul#notice-list li {
+  color: white;
 }
 
 body {
