--- a/scss/main-sections/_contact-us.scss
+++ b/scss/main-sections/_contact-us.scss
@@ -215,7 +215,7 @@ div#contact-us{
                                             // outline: none;
                                             width: 100%;
                                             background-color: #fff;
-                                            border: 1px solid #e5e5e5;
+                                            border: 1px solid #ccc;
                                             border-radius: 2px;
                                             box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
                                             transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -312,7 +312,7 @@ div#contact-us{
                                 div.policies-footer{
                                     display: flex;
                                     justify-content: space-between;
-                                    a{
+                                    a#send-enquiry-button{
                                         @include offices-link_button($netmatters_black);
                                         width: 148.2px;
                                         height: 45px;
@@ -340,11 +340,30 @@ div#contact-us{
                             width: 66%;
                         }
                         div.extra-contact-info{
+                            width: 27%;
                             position: relative;
                             left: -50px;
                         }
                     }
                 }          
+            }
+        }
+    }
+    // form input notice (error message)
+    div#notice{
+        display: none;
+        position: fixed;
+        top: 0;
+        width: 60%;
+        margin: auto;
+        padding: 10px;
+        background-color: hsl(348, 100%, 61%);
+        transition: 1s;
+        ul#notice-list{
+            width: calc(100% - 20px);
+            margin: auto;
+            li{
+                color: white;
             }
         }
     }
